# ArchitectureOfComputer

./: .gitignore  CMakeLists.txt  README.md  test.asm  test.mc
assembler/: CMakeLists.txt
assembler/src/: Generator.cpp  Generator.hpp  LexicalAnalyzer.cpp  LexicalAnalyzer.hpp  SyntaxAnalyzer.cpp  SyntaxAnalyzer.hpp  constants.hpp  main.cpp
libs/common/: CMakeLists.txt
libs/common/include/: constants.hpp
simulator/: CMakeLists.txt
simulator/src/: MemoryDevice.cpp  MemoryDevice.hpp  Processor.cpp  Processor.hpp  RegisterDevice.cpp  RegisterDevice.hpp  main.cpp
